# nebula

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt  README.md
engine/include/: engine.h  engine_debug.h  engine_events.h  engine_platforms.h
engine/include/camera/: camera.h  camera_events.h
engine/include/concurrency/: briefing.h  messages.h  messaging.h  safe_queue.h  scheduler.h  thread_pool.h  worker.h
engine/include/config/: configuration.h  engine_config.h
engine/include/ecs/: component.h  ecs.h  entity.h
engine/include/exception/: engine_exception.h
engine/include/file/: file_manager.h  file_utils.h
engine/include/graphics/: assimp_loader.h  material.h  object_loader.h  shader.h  shader_loader.h  shapes.h  texture.h  texture_loader.h
engine/include/graphics/opengl/: opengl.h  opengl_shader.h
engine/include/injector/: di.h  injectable.h  injection.h  injector.h
engine/include/input/: input.h  input_events.h
engine/include/logging/: logger.h  logger.tpp  sigsegv_handler.h
engine/include/memory/: arc.h  containers.h  metrics.h  object_pool.h  ptr.h  spinlock.h
engine/include/memory/allocators/: block_allocator.h  default_allocator.h
engine/include/monad/: result.h
engine/include/profiling/: profiler.h
engine/include/random/: random.h
engine/include/scene/: camera_component.h  entity.h  render_component.h  scene.h  transform_component.h
engine/include/serialization/: persistence.h  serializable.h  serialized_object.h
engine/include/string/: string_utils.h
engine/include/system/: endian.h  system_info.h
engine/include/templating/: crtp.h  executor.h  generic_map_registry.h  is_base_of_template.h  type_hash.h  type_seq.h
engine/include/time/: delta_timer.h  fixed_timer.h  stopwatch.h  system_time.h  time_types.h
engine/include/vector/: vector_utils.h
engine/include/window/: events.h  window.h
engine/src/: engine.cpp
engine/src/camera/: camera.cpp
engine/src/concurrency/: messaging.cpp  scheduler.cpp  thread_pool.cpp  worker.cpp
engine/src/config/: configuration.cpp
engine/src/ecs/: ecs.cpp
engine/src/exception/: engine_exception.cpp
engine/src/file/: file_manager.cpp  file_utils.cpp
engine/src/graphics/: assimp_loader.cpp  object_loader.cpp  shader_loader.cpp  texture.cpp  texture_loader.cpp
engine/src/graphics/opengl/: opengl.cpp  opengl_shader.cpp
engine/src/injector/: injector.cpp
engine/src/input/: input.cpp
engine/src/logging/: logger.cpp
engine/src/random/: random.cpp
engine/src/string/: string_utils.cpp
engine/src/system/: system_info.cpp  system_info_linux.cpp  system_info_mac.cpp  system_info_windows.cpp
engine/src/time/: delta_timer.cpp  fixed_timer.cpp  system_time.cpp
engine/src/window/: window.cpp
sandbox/: CMakeLists.txt  main.cpp
sandbox/res/: config.yml
sandbox/res/models/backpack/: backpack.nobj
sandbox/res/shaders/: default.frag  default.vert  main.frag  main.vert  pbr.frag  pbr.vert  pbrtest.frag  skybox.vert
